Fix commit messages not aligning properly when max depth is too large

--- a/src/app/shared/version_control_graph/graph.component.css
+++ b/src/app/shared/version_control_graph/graph.component.css
@@ -22,9 +22,8 @@
 
 #alignment-p {
   float: left;
-  height: 100%;
-  width: 50px;
   margin: 0;
+  padding-right: 12px;
 }
 
 #commit-container:nth-child(n) {
